--- a/src/assets/translations/en.json
+++ b/src/assets/translations/en.json
@@ -1,5 +1,9 @@
 {
   "definition": "Emigration",
   "description": " Emigration refers to the act of leaving one's own country to settle permanently in another. It involves moving away from one's homeland to reside in a different country.",
-  "phonetics": " /ˌɛmɪˈɡreɪʃən/"
+  "phonetics": " /ˌɛmɪˈɡreɪʃən/",
+
+  "welcomeSection_title": "Embarking on a journey to a new chapter of your life?",
+  "welcomeSection_subtitle": "You're in the right place.",
+  "welcomeSection_intro": "Emigrationhub is your go-to resource for navigating the exciting and challenging world of emigration. Whether you're considering a change for personal growth, career opportunities, or a fresh start, we're here to guide you every step of the way."
 }
